--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 certifi==2025.1.31
 charset-normalizer==3.4.1
+dotenv==0.9.9
 idna==3.10
 nba_api==1.9.0b1
 numpy==2.2.4
 pandas==2.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 requests==2.32.3
 six==1.17.0
